# fartvy

./: Cargo.toml  compile_for_wasm.sh  fartvy.js  index.html  release.sh  run_test.sh
.github/workflows/: rust.yml
src/: camera.rs  main.rs  world.rs
