[package]
name = "fartvy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
meshopt = "0.4.0"
noisy_bevy = "0.7.0"
rand = "0.8.5"
wasm-bindgen = "0.2.95"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
